cmake_minimum_required(VERSION 3.16.0)
project(hello)
#set(CMAKE_BUILD_TYPE Release)
include_directories(include)
#set(SOURCES src/add.cpp)
file(GLOB SOURCES "src/*.cpp")
#add_library(add STATIC ${SOURCES})
add_library(add SHARED ${SOURCES})
install(TARGETS add DESTINATION shared)

#set(PROJECT_LINK_LIBS libadd.so)
#set(PROJECT_LINK_LIBS libadd.a)
#link_directories(static)
#add_executable(hello src/hello.cpp)
#target_link_libraries(hello ${PROJECT_LINK_LIBS})
